updated jvm opts